Minor fix but radio buttons for Rate not showing on chrome through heroku

--- a/app/assets/stylesheets/questions.scss
+++ b/app/assets/stylesheets/questions.scss
@@ -12,7 +12,7 @@
   }
   .Title, .QuestionTitle {
     border-bottom: 1px solid rgba(100,100,100,.2);
-    h3{color: #0d68c2}
+    h1, h3{color: #0d68c2}
   }
 }
 .QuestionIndex {
